Fix height issue on Safari

--- a/client/src/assets/global-styles/main.scss
+++ b/client/src/assets/global-styles/main.scss
@@ -4,7 +4,7 @@
 
 .main-container {
   padding: spacing-var.$space-lg spacing-var.$space-rg;
-  max-height: calc(100vh - 88px);
+  max-height: calc(100dvh - 88px);
   overflow-y: scroll;
   scrollbar-width: none;
 }
@@ -32,6 +32,6 @@
 @media only screen and (min-width: 768px){
   .main-container {
     padding: spacing-var.$space-lg;
-    max-height: 100vh;
+    max-height: 100dvh;
   }
 }
